# cde

./: .editorconfig  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
data/: atlas-backup-2023-03-01.json
src/: App.svelte  app.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Datatable.svelte  EventBus.ts  Form.svelte  Helper.ts
src/pages/: Data.svelte  Export.svelte  Statistics.svelte
