[package]
name = "cde"
version = "0.2.0"
description = "A Tauri App"
authors = ["hermitpopcorn"]
repository = "https://github.com/hermitpopcorn/cde"
default-run = "cde"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.2", features = ["api-all"] }
futures = "0.3"
mongodb = "2.2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = { version = "1", features = ["full"] }
once_cell = "1"
anyhow = "1"
maplit = "1"
regex = "1.5"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
